# ransomware-detection-system

./: .gitignore  ransomware_detection.db
config/: .dockerignore  .env.example  .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/training/: training.ipynb
deployment/scripts/: deploy.sh  install.sh  monitor.sh  run_server.sh  run_tests.sh
docker/: docker-compose.yml  dockerfile  nginx.conf
documentation/: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  VERSION
documentation/docs/: summary.md
models/: feature_scaler.joblib  ransomware_model.joblib
ransomware_env_3.11/: pyvenv.cfg
ransomware_env_3.11/Scripts/: activate  activate.bat  numba
src/: compare_models.ipynb  config.py  evaluate_model.py  model_evaluation.ipynb  ransomware_detection.db  ransomware_detector.py  robustness_explainability_evaluation.ipynb  system_performance_evaluation.ipynb  test_data_generator.py  train_script.py  web_server.py
src/test_data/: feature_analysis.csv  feature_analysis.json  scenario_escalating_threat.csv  scenario_escalating_threat.json  scenario_mixed_activity.csv  scenario_mixed_activity.json  scenario_normal_day.csv  scenario_normal_day.json  scenario_ransomware_attack.csv  scenario_ransomware_attack.json
template/: index.html
test_data/: feature_analysis.csv  feature_analysis.json  scenario_escalating_threat.csv  scenario_escalating_threat.json  scenario_mixed_activity.csv  scenario_mixed_activity.json  scenario_normal_day.csv  scenario_normal_day.json  scenario_ransomware_attack.csv  scenario_ransomware_attack.json
tests/: integration_test.py
