[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ransomware-detection-system"
version = "1.0.0"
description = "Real-time explainable ransomware detection for resource-constrained environments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ransomware Detection Team", email = "security@example.com"}
]
maintainers = [
    {name = "Security Team", email = "security@example.com"}
]
keywords = [
    "ransomware", "detection", "security", "machine-learning", 
    "explainable-ai", "real-time", "iot", "cybersecurity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "Flask-SocketIO>=5.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "shap>=0.42.0",
    "joblib>=1.3.0",
    "python-socketio>=5.8.0",
    "eventlet>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
deployment = [
    "gunicorn>=20.1.0",
    "redis>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ransomware-detection-system"
Documentation = "https://ransomware-detection-system.readthedocs.io"
Repository = "https://github.com/your-org/ransomware-detection-system"
"Bug Tracker" = "https://github.com/your-org/ransomware-detection-system/issues"
Changelog = "https://github.com/your-org/ransomware-detection-system/blob/main/CHANGELOG.md"

[project.scripts]
ransomware-detector = "src.ransomware_detector:main"
ransomware-webui = "src.web_server:main"
generate-test-data = "src.test_data_generator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
